# sysprog_2021

./: .gitignore  README.md
task1/: CMakeLists.txt  main.c
task1/src/: coroutine.c  coroutine.h  scheduler.c  scheduler.h  scheduler_internal.h  sort.c  sort.h  support.c  support.h
task2/: CMakeLists.txt  Cshell  Makefile
task2/include/: commands.h  parser.h  shell.h  signal_handlers.h  support.h
task2/src/: main.c  parser.c  shell.c  signal_handlers.c  support.c
task3/: CMakeLists.txt  userfs.c  userfs.h
